# openapi/specification/book-webapp-fastapi_API-specification.yaml
@@ -111,24 +111,9 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Book'
+              $ref: '#/components/schemas/Book-request'
             examples:
               Update one book:
-                value:
-                  id: '0142'
-                  title: Software Design 2022.08
-                  author: someone
-                  company: 技術評論社
-                  category: technology
-                  country: Japan
-                  publishDate: '2019-08-24'
-                  createdDatetime: '2019-08-24T10:12:20Z'
-                  updateddDatetime: '2019-08-24T10:12:20Z'
-          application/xml:
-            schema:
-              $ref: '#/components/schemas/Book'
-            examples:
-              example-1:
                 value:
                   id: '0142'
                   title: Software Design 2022.08
@@ -203,26 +188,7 @@ paths:
         content:
           application/json:
             schema:
-              type: object
-              properties:
-                id:
-                  type: string
-                title:
-                  type: string
-                author:
-                  type: string
-                category:
-                  type: string
-                company:
-                  type: string
-                publishDate:
-                  type: string
-                  format: date
-                  example: '2022-08-09'
-              required:
-                - id
-                - title
-                - category
+              $ref: '#/components/schemas/Book-request'
             examples:
               Create Book Bob Fellow:
                 value:
@@ -333,3 +299,89 @@ components:
         - id
         - title
         - category
+    Book-request:
+      title: Book-request
+      type: object
+      description: 書籍情報のリクエスト
+      examples:
+        - id: '0142'
+          title: Software Design 2022.08
+          author: someone
+          company: 技術評論社
+          category: technology
+          country: Japan
+          publishDate: '2019-08-24'
+      properties:
+        id:
+          type: string
+          description: Unique identifier for the given book.
+        title:
+          type: string
+        author:
+          type: string
+        category:
+          type: string
+        country:
+          type: string
+        publishDate:
+          type: string
+          format: date
+          example: '2022-08-10'
+          description: Set to true if the book's email has been verified.
+      required:
+        - id
+        - title
+        - category
+  responses:
+    Succeeded:
+      description: Example response
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+            x-examples:
+              example-1:
+                message: succeeded
+    Unauthorized:
+      description: Example response
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+            x-examples:
+              example-1:
+                message: unauthorized
+    Not-found:
+      description: Example response
+      content:
+        application/json:
+          schema:
+            type: object
+            properties:
+              message:
+                type: string
+            x-examples:
+              example-1:
+                message: not found
+    Internal-server-error:
+      description: Example response
+      content:
+        application/json:
+          schema:
+            $ref: ''
+            x-examples:
+              example-1:
+                message: internal server error
+                try-again: 'YYYY-MM-DD HH:MM:DD+HH:MM'
+  requestBodies:
+    book-info:
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Book-request'
