# src/book/main.py
@@ -1,23 +1,27 @@
 # generated by fastapi-codegen:
 #   filename:  book-webapp-fastapi_API-specification.yaml
-#   timestamp: 2022-08-08T05:59:32+00:00
+#   timestamp: 2022-09-06T17:09:01+00:00
 
 from __future__ import annotations
-
-from typing import List, Optional, Union
-
-from fastapi import FastAPI, Header, Path
-
 from models import (
     Book,
+    BookRequest,
     BooksBookIdDeleteResponse,
     BooksBookIdGetResponse,
     BooksBookIdGetResponse1,
     BooksBookIdGetResponse2,
     BooksBookIdPutResponse,
-    BooksPostRequest,
     BooksPostResponse,
 )
+
+from typing import List, Optional, Union
+import yaml
+import logging
+from fastapi import FastAPI, Header, Path, APIRouter
+router = APIRouter()
+
+
+logger = logging.getLogger(__name__)
 
 app = FastAPI(
     title='book-webapp-fastapi_API-specification',
@@ -28,17 +32,13 @@ app = FastAPI(
     servers=[{'url': 'http://localhost:3000'}],
 )
 
-
-@app.get("/hello")
-async def hello():
-    # テスト
-    return {"message": "hello world!"}
+BOOK_DATA = yaml.safe_load('./entity/bookdata.yml')
 
 
 @app.post('/books', response_model=BooksPostResponse)
 def post_book(
     authorization: Optional[str] = Header(None, alias='Authorization'),
-    body: BooksPostRequest = None,
+    body: BookRequest = None,
 ) -> BooksPostResponse:
     """
     Create New Book
@@ -50,7 +50,7 @@ def post_book(
 def get_books(
     authorization: Optional[str] = Header(None, alias='Authorization')
 ) -> List[Book]:
-    pass
+    return BOOK_DATA
 
 
 @app.get(
@@ -65,20 +65,27 @@ def get_books(
 def get_books_book_id(
     authorization: str = Header(..., alias='Authorization'),
     book_id: str = Path(..., alias='bookId'),
-) -> Union[
-    Book, BooksBookIdGetResponse, BooksBookIdGetResponse1, BooksBookIdGetResponse2
-]:
+):
+    # ) -> Union[
+    #     Book, BooksBookIdGetResponse, BooksBookIdGetResponse1, BooksBookIdGetResponse2
+    # ]:
     """
     Get Book Info by Book ID
     """
-    pass
+    logger.info(BOOK_DATA)
+
+    id_list = [book_id['id'] for book_id in BOOK_DATA]
+    if book_id not in id_list:
+        return {}
+    else:
+        return BOOK_DATA[id_list.index(book_id)]
 
 
 @app.put('/books/{book_id}', response_model=BooksBookIdPutResponse)
 def put_books_book_id(
     authorization: str = Header(..., alias='Authorization'),
     book_id: str = Path(..., alias='bookId'),
-    body: Book = None,
+    body: BookRequest = None,
 ) -> BooksBookIdPutResponse:
     pass
 
