# src/book/models.py
@@ -1,6 +1,6 @@
 # generated by fastapi-codegen:
 #   filename:  openapi/specification/book-webapp-fastapi_API-specification.yaml
-#   timestamp: 2022-08-08T05:59:32+00:00
+#   timestamp: 2022-09-06T17:09:01+00:00
 
 from __future__ import annotations
 
@@ -29,6 +29,19 @@ class Book(BaseModel):
     )
 
 
+class BookRequest(BaseModel):
+    id: str = Field(..., description='Unique identifier for the given book.')
+    title: str
+    author: Optional[str] = None
+    category: str
+    country: Optional[str] = None
+    publishDate: Optional[date] = Field(
+        None,
+        description="Set to true if the book's email has been verified.",
+        example='2022-08-10',
+    )
+
+
 class BooksBookIdGetResponse(BaseModel):
     pass
 
@@ -47,15 +60,6 @@ class BooksBookIdPutResponse(BaseModel):
 
 class BooksBookIdDeleteResponse(BaseModel):
     pass
-
-
-class BooksPostRequest(BaseModel):
-    id: str
-    title: str
-    author: Optional[str] = None
-    category: str
-    company: Optional[str] = None
-    publishDate: Optional[date] = Field(None, example='2022-08-09')
 
 
 class BooksPostResponse(BaseModel):
